yaml_files/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ch4-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
      - name: api
        image: hedgehogsacr.azurecr.io/api:latest
        ports:
        - containerPort: 8080
