yaml_files/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: ch4-demo
spec:
  replicas: 0
  selector:
    matchLabels:
      name: ui
  template:
    metadata:
      labels:
        name: ui
    spec:
      containers:
      - name: ui
        image: hedgehogsacr.azurecr.io/ui:${TAG}
        ports:
        - containerPort: 3000
