yaml_files/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    name: api
  namespace: ch4-demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: api
