yaml_files/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    name: ui
  namespace: ch4-demo
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector: 
    name: ui
